move index back to samples and fix alignment

--- a/samples/index.html
+++ b/samples/index.html
@@ -129,7 +129,8 @@
           <ilw-header-megamenu-section>
               <span slot="label">Links, with decorative image aligned left</span>
               <div>
-              <ul>
+
+                <ul>
                 <li><a href="/">Undergrad Admissions</a></li>
                 <li><a href="/">Graduate Admissions</a></li>
                 <li><a href="/">International Admissions</a></li>
@@ -157,7 +158,8 @@
                   <li><a href="/">Find a mentor</a></li>
                   <li><a href="/">Student Handbook</a></li>
                 </ul>
-              <img src="https://fastly.picsum.photos/id/1025/500/400.jpg?hmac=MPFZjsU2UG1Mr3SjMkYP2F9jnhQWyatt6soxbOj0TN4" alt="">  
+                 <img class="align-left" src="https://fastly.picsum.photos/id/1025/500/400.jpg?hmac=MPFZjsU2UG1Mr3SjMkYP2F9jnhQWyatt6soxbOj0TN4" alt="">  
+
             </div>
             </ilw-header-megamenu-section>
       </li>
