--- a/samples/index.html
+++ b/samples/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="//cdn.toolkit.illinois.edu/3/toolkit.js"></script>
 
 
-    <script type="module" src="src/ilw-header-megamenu.ts"></script>
+    <script type="module" src="../src/ilw-header-megamenu.ts"></script>
        <script>
         document.addEventListener("DOMContentLoaded", function(event) {
           const params = new URLSearchParams(window.location.search);
